# flask-postrges-alembic-backend

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 088e516dfb8a_test_table_commit.py  176e6a96abe1_add_number_column_to_test_table.py  2920f780ff91_add_exampletable.py  e7a102b73d48_remove_testtable.py
app/: README.md  app.py
app/blueprints/: example.py  test.py
app/settings/: default.py  development.py
app/web/: error_handler.py  renderers.py
model/: __init__.py  base.py  example_table.py  test_table.py
