[tool.poetry]
name = "pineapple"
version = "0.1.0"
description = ""
authors = ["petemcnie <petemcnie0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.8.1"
Flask = "^2.2.2"
Flask-Migrate = "^3.1.0"
astroid = "^2.12.11"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
bandit = "^1.7.4"
pylint = "^2.15.4"

[tool.poetry.group.dev.dependencies]
flask-sqlalchemy = "^3.0.0"
click = "^8.1.3"
greenlet = "^1.1.3.post0"
importlib-metadata = "^5.0.0"
importlib-resources = "^5.10.0"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
Mako = "^1.2.3"
MarkupSafe = "^2.1.1"
psycopg2 = "^2.9.4"
SQLAlchemy = "^1.4.41"
Werkzeug = "^2.2.2"
zipp = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
